修改代币查询接口定义
