# docs/swagger.yaml
@@ -1496,7 +1496,7 @@ paths:
         type: string
       - description: 排序字段，支持以下值：MARKET_CAP, PRICE_CHANGE_5M, PRICE_CHANGE_1H, PRICE_CHANGE_24H,
           NATIVE_VOLUME_1H, NATIVE_VOLUME_24H, TX_COUNT_24H, HOLDERS, INITIALIZE_AT,
-          Links
+          LINKS
         enum:
         - MARKET_CAP
         - PRICE_CHANGE_5M
@@ -1649,7 +1649,7 @@ paths:
         required: true
         type: string
       - description: 搜索参数（如代币名称或地址）
-        in: path
+        in: query
         name: param
         required: true
         type: string
